# emend-lt

./: Cargo.toml  README.md  languagetool-rust.md
crates/analysis/: Cargo.toml
crates/analysis/src/: disambig.rs  grammar.rs  lib.rs  spelling.rs
crates/matcher/: Cargo.toml
crates/matcher/src/: analyzed.rs  entities.rs  lib.rs  parse.rs  pattern.rs  token.rs
crates/morfologik/: Cargo.toml
crates/morfologik/src/: dict.rs  fsa.rs  lib.rs  speller.rs  synth.rs
crates/segmenter/: Cargo.toml
crates/segmenter/src/: lib.rs  regex_translate.rs  srx.rs
crates/server/: Cargo.toml
crates/server/src/: engine.rs  http.rs  main.rs
crates/tagger/: Cargo.toml
crates/tagger/src/: casing.rs  lib.rs
crates/tokenizer/: Cargo.toml
crates/tokenizer/src/: lib.rs
docs/: LEARNINGS.md  NEXT.md  phase0-scope.md  phase1-english.md
oracle/: AnalyzedOracle.java  README.md
tools/phase0/: .gitignore  README.md  build_scope_doc.py  classify_rules.py  corpus.json  enumerate_rules.py
