[package]
name = "analysis"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Raw analysis + disambiguation pipeline: text -> AnalyzedTokenReadings compatible with LanguageTool's getRawAnalyzedSentence + XmlRuleDisambiguator"

[dependencies]
morfologik = { path = "../morfologik" }
tokenizer = { path = "../tokenizer" }
tagger = { path = "../tagger" }
matcher = { path = "../matcher" }
segmenter = { path = "../segmenter" }
quick-xml = "0.41"

[[bin]]
name = "analyze"
path = "src/bin/analyze.rs"
