[package]
name = "analysis"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Raw analysis + disambiguation pipeline: text -> AnalyzedTokenReadings compatible with LanguageTool's getRawAnalyzedSentence + XmlRuleDisambiguator"

[dependencies]
morfologik = { path = "../morfologik" }
tokenizer = { path = "../tokenizer" }
tagger = { path = "../tagger" }
matcher = { path = "../matcher" }
segmenter = { path = "../segmenter" }
quick-xml = "0.41"
fancy-regex = "0.18"

[[bin]]
name = "analyze"
path = "src/bin/analyze.rs"

[[bin]]
name = "grammar-examples"
path = "src/bin/grammar_examples.rs"

[[bin]]
name = "check-text"
path = "src/bin/check_text.rs"

[[bin]]
name = "spell-text"
path = "src/bin/spell_text.rs"
