[package]
name = "matcher"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Shared token-pattern matcher for LanguageTool disambiguation.xml and grammar.xml"

[dependencies]
fancy-regex = "0.18"
quick-xml = "0.41"

[[bin]]
name = "pattern-coverage"
path = "src/bin/pattern_coverage.rs"
